<resources>
    <string name="app_name">Calorie Diary</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="food">Food</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="editprofile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="target">Target</string>
    <string name="calorie_limit_per_day">Calorie Limit Per Day</string>
    <string name="edit">Edit</string>
    <string name="foodname">Food Name</string>
    <string name="cal">Calorie</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="finish">Finish</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="others">Others</string>
    <string name="grains">Grains</string>
    <string name="vegetables">Vegetables</string>
    <string name="protein">Protein</string>
    <string name="fruits">Fruits</string>
    <string name="add">Add</string>
    <string-array name="emailSubjects">
        <item>@string/complaint</item>
        <item>@string/suggestion</item>
        <item>@string/others</item>
    </string-array>
    <string name="title_activity_contact">ContactActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="subject">Subject :</string>
    <string name="message">Message :</string>
    <string name="send">Send</string>
    <string name="complaint">Complaint</string>
    <string name="suggestion">Suggestion</string>
    <string name="contactUs">ContactUs</string>
    <string name="delete_all_items">Delete All Items</string>
    <string name="ateCar">"Absorbed Calories : "</string>
    <string name="rest">"Rest of Calories : "</string>
    <string name="fillIn">Please Fill In All The Grids!</string>
</resources>