<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="26dp"
    tools:context=".AddItemActivity">

    <TextView
        android:id="@+id/TextView_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="" android:textSize="25sp"
        android:inputType="datetime" />


    <RadioGroup
        android:id="@+id/RadioGroup_Period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/RadioButton_Period_Breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPeriodRadioButtonClicked"
            android:text="@string/breakfast" />

        <RadioButton
            android:id="@+id/RadioButton_Period_Lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPeriodRadioButtonClicked"
            android:text="@string/lunch" />

        <RadioButton
            android:id="@+id/RadioButton_Period_Dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPeriodRadioButtonClicked"
            android:text="@string/dinner" />

        <RadioButton
            android:id="@+id/RadioButton_Period_Others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPeriodRadioButtonClicked"
            android:text="@string/others" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/RadioGroup_Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/RadioButton_Category_Grains"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onCategoryRadioButtonClicked"
            android:text="@string/grains" />

        <RadioButton
            android:id="@+id/RadioButton_Category_Vegetables"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onCategoryRadioButtonClicked"
            android:text="@string/vegetables" />

        <RadioButton
            android:id="@+id/RadioButton_Category_Protein"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onCategoryRadioButtonClicked"
            android:text="@string/protein" />

        <RadioButton
            android:id="@+id/RadioButton_Category_Fruits"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onCategoryRadioButtonClicked"
            android:text="@string/fruits" />
    </RadioGroup>

    <EditText
        android:id="@+id/EditText_FoodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/food" />


    <EditText
        android:id="@+id/EditText_Calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/cal"
        android:inputType="number" />

    <Button
        android:id="@+id/Button_AddData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />


</LinearLayout>