<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".EditProfileActivity">

    <ImageView
        android:id="@+id/ImageView_ProfilePicture"
        android:layout_width="187dp"
        android:layout_height="195dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/TextView_Edit_ProfileName_Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageView_ProfilePicture" />

    <EditText
        android:id="@+id/EditText_Edit_ProfileName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Edit_ProfileName_Header" />

    <TextView
        android:id="@+id/TextView_Edit_ProfileGender_Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Edit_ProfileName" />

    <RadioGroup
        android:id="@+id/RadioGroup_Set_Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation='horizontal'
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Edit_ProfileGender_Header">

        <RadioButton
            android:id="@+id/RadioButton_Set_Gender_Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/RadioButton_Set_Gender_Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/female" />

    </RadioGroup>


    <TextView
        android:id="@+id/TextView_Edit_ProfileTarget_Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/target"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup_Set_Gender" />

    <EditText
        android:id="@+id/EditView_Edit_ProfileTarget"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/target"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Edit_ProfileTarget_Header" />

    <TextView
        android:id="@+id/TextView_Edit_ProfileCalorieLimit_Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calorie_limit_per_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditView_Edit_ProfileTarget" />

    <EditText
        android:id="@+id/EditView_Edit_ProfileCalorieLimit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cal"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Edit_ProfileCalorieLimit_Header" />

    <Button
        android:id="@+id/Button_save_Profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>